# Espresso

./: .clangd  .gitignore  CMakeLists.txt  build.sh  format.sh  partitions.csv  readme.md  sdkconfig  setup.sh
assets/: espresso.xcf
esp-idf/components/bt/controller/lib_esp32h4/esp32h4-bt-lib/: NOTICE
esp-idf/components/bt/esp_ble_audio/lib/lib/: NOTICE  README.md
esp-idf/components/lwip/lwip/: .gitlab-ci.yml
esp-idf/components/lwip/lwip/.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml
esp-idf/components/lwip/lwip/src/api/: api_lib.c  api_msg.c  netdb.c
esp-idf/components/lwip/lwip/src/core/: dns.c
esp-idf/components/mbedtls/mbedtls/: CMakeLists.txt  sbom.yml
esp-idf/components/mbedtls/mbedtls/tests/: ssl-opt.sh
esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/: CMakeLists.txt  objlib.cmake  sbom.yml  sync_mbedtls.sh
esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/core/: .gitignore  CMakeLists.txt  psa_crypto_driver_wrappers.h  psa_crypto_driver_wrappers_no_static.c  psa_crypto_storage.c  psa_crypto_storage.h  tf_psa_crypto_config_check_user.h
esp-idf/components/spiffs/spiffs/src/: spiffs_hydrogen.c
examples/: blink.es  code.es  countdown.es
host/: compiler.c  esp_log.h  espresso-cli.c  espresso-lsp.c
include/espresso/: ast.h  compiler.h  repl.h  tokenizer.h  vm.h
include/espresso/hal/: gpio.h  sleep.h
include/espresso/vm/: bytecode.h  types.h
main/: CMakeLists.txt  compiler.c  main.c
main/hal/: gpio.c  sleep.c
main/repl/: repl.c
main/vm/: bytecode.c  run.c  tokenizer.c  vm.c
(+143 files in other folders)
